# stable-audio-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: gpu-cloud-deployment.md  model-options-and-inpainting.md
src/stable_audio_api/: __init__.py  cli.py  main.py
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  separator.tsx  tabs.tsx  textarea.tsx
ui/src/lib/: utils.ts
