[project]
name = "stable-audio-api"
version = "0.1.0"
description = "FastAPI server for Stability AI Stable Audio 3 Small SFX."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "python-dotenv>=1.2.1",
    "soundfile>=0.13.1",
    "stable-audio-3",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
stable-audio-api = "stable_audio_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stable_audio_api"]

[tool.uv.sources]
stable-audio-3 = { git = "https://github.com/Stability-AI/stable-audio-3.git" }
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
